--- a/slides/main.tex
+++ b/slides/main.tex
@@ -124,6 +124,7 @@
   \begin{itemize}
   \item If the input is fixed (i.e. $lb_j^0 = ub_j^0, \forall j \in [1, n_0]$), all other variables have one possible value
   \item The binary variables $z_j^k$ are also defined uniquely, with a degenerate case when the ReLU unit receives a $0$ as input
+  \item This makes it easy to find solutions for the model. Almost any random vector $x^0$ satisfies restriction~\ref{limits-xn0}
   \end{itemize}
 \end{frame}
 
