Added the experimental setup.

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -206,6 +206,23 @@
   \end{figure}
 \end{frame}
 
+\begin{frame}{Experimental setup}
+  \begin{itemize}
+  \item DNN1 - three hidden layers with eight units each
+  \item DNN2 - six hidden layers with eight units each
+  \item DNN3 - four hidden layers with (20, 10, 8, 8) units
+  \item DNN4 - five hidden layers with (20, 10, 8, 8, 8) units
+  \item DNN5 - six hidden layers with (20, 10, 10, 10, 10) units
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Experimental setup}
+  \begin{itemize}
+  \item All networks were trained with $50$ epochs using Stochastic Gradient Descent
+  \item The test accuracy was in the 93\%-96\% range
+  \end{itemize}
+\end{frame}
+
 \begin{frame}{Basic vs. tight bounds}
   \begin{figure}
     \centering
